--- a/tttt.html
+++ b/tttt.html
@@ -5,15 +5,16 @@
 <title>九宫格</title>
 <link rel ="stylesheet"type="text/css"href="1.css"></link>
 <style>
+*{ padding:0; margin:0;
+}
 
-.box{  
-    margin: 0px auto;  
-    padding-bottom: 50%;      
-    width: 50%;       
-    height: 0;  
-    border: 1px solid #F4F4F4;  
+.box{
+    width: 100%
+    height: 0
+    padding-top: 100%
+}
 
-} 
+
 .a2{
 	clear: both;
 }
