--- a/tttt.html
+++ b/tttt.html
@@ -5,7 +5,8 @@
 <title>九宫格</title>
 <link rel ="stylesheet"type="text/css"href="1.css"></link>
 <style>
-*{ padding:0; margin:0;
+*{ padding:0;
+   margin:0;
 }
 
 .box{
@@ -16,7 +17,7 @@
 
 
 .a2{
-	clear: both;
+    clear: both;
 }
 </style>   
 </head>
@@ -32,7 +33,7 @@
 	     <p class="a2"></p>
 	     <p></p>
 	     <p></p>
-  </div>
+</div>
 
 </body>
 </html>
