--- a/tttt.html
+++ b/tttt.html
@@ -5,14 +5,15 @@
 <title>九宫格</title>
 <link rel ="stylesheet"type="text/css"href="1.css"></link>
 <style>
+
 *{ padding:0;
    margin:0;
 }
 
 .box{
-    width: 100%
-    height: 0
-    padding-top: 100%
+	width: 100%
+	height: 0
+	padding-top: 100%
 }
 
 
@@ -33,6 +34,18 @@
 	     <p class="a2"></p>
 	     <p></p>
 	     <p></p>
+
+<div class="box">
+	<p class="a2"></p>
+	<p></p>
+	<p></p>   
+	<p class="a2"></p>
+	<p></p>
+	<p></p>
+	<p class="a2"></p>
+	<p></p>
+	<p></p>
+
 </div>
 
 </body>
